@@ -1,3 +1,7 @@
+2008-08-20  Mark Kettenis  <kettenis@gnu.org>
+
+	* sparc-tdep.c: Make some comments catch up with reality.
+
 2008-08-20  Vladimir Prus  <vladimir@codesourcery.com>
 
 	* NEWS: Mention 'set target-async'
